<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyCoin</string>
    <string name="dialog_message">Reset Data Catatan?</string>
    <string name="dialog_simpan">Simpan</string>
    <string name="dialog_title_saldo">Saldo Kamu</string>
    <string name="ex_belanja">ex: Belanja</string>
    <string name="debt_kamu">Hutang Kamu</string>

        more

    <string name="masukan_judul">Masukan Judul Catatan</string>
    <string name="masukan_total_uang">Masukan Jumlah Uang</string>
    <string name="mengerti_bawa_kembali">Oke, </string>
    <string name="income">Pemasukan</string>
    <string name="income_kamu">Pemasukan Kamu</string>
    <string name="expenses">Pengeluaran</string>
    <string name="pengluaran_kamu">Pengeluaran Kamu</string>
    <string name="perhatian">Perhatian!</string>
    <string name="history">Riwayat</string>
    <string name="saldo">Saldo</string>
    <string name="saldo_kamu">Saldo Kamu</string>
    <string name="spinner_peringatan_data">Data kurang dari 2</string>
    <string name="toast_hapus_berhasil">Data Dihapus</string>
    <string name="toast_isi_kolom">Isi Semua Kolom</string>
    <string name="total_income_kamu">Total Pemasukan</string>
    <string name="total_expenses_kamu">Total Pengeluaran</string>
    <string name="rp_0">Rp.0</string>
    <string name="reset">Reset</string>
    <string name="ex_1_000_000">ex: 10000</string>
    <string name="sebuah_tombol_gambar_untuk_menghapus_data">tombol hapus</string>
    <string name="selected_date">Tanggal Belum Dipilih </string>
    <string name="pilih_date">Pilih Tanggal</string>
    <string name="app" translatable="false">App</string>
    <string name="open">Buka</string>
    <string name="close">Tutup</string>
    <string name="choose_menu_below">Choose menu below:</string>

    <string name="you_save">You saved:</string>
    <string name="add_image">add_image</string>
    <string name="no_data_found">No data found</string>
    <string name="sort_oldest">Urut Tanggal (Terlama)</string>
    <string name="sort_newest">Urut Tanggal (Terbaru)</string>
    <string name="start_date">Mulai Tanggal</string>
    <string name="end_date">Tanggal Akhir</string>
    <string name="filter">Filter data</string>
    <string name="remove_filter">Remove filter</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string name="masuk">Membuka MyCoin</string>
    <string name="g_dompet">dompet</string>
    <string name="txtBoard1" translatable="false">Dompet Digital</string>
    <string name="desc1">Anda dapat mengatur keuangan secara digital</string>
    <string name="todo3">todo</string>
    <string name="todo1">todo</string>
</resources>