<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

        <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"/>

        <Button
                android:id="@+id/filter_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_date"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp"/>

        <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"/>

        <Button
                android:id="@+id/filter_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_date"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp"/>
    </LinearLayout>
</ScrollView>