<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

    <TextView
            android:id="@+id/dialog_main_income_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_kamu"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_0"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:layout_toEndOf="@+id/dialog_main_income_tv"/>

    <TextView
            android:id="@+id/dialog_main_expenses_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengluaran_kamu"
            android:layout_below="@+id/dialog_main_income_tv"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/dialog_main_income"
            android:text="@string/rp_0"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:layout_toEndOf="@+id/dialog_main_expenses_tv"/>

    <TextView
            android:id="@+id/dialog_main_debt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_main_expenses_tv"
            android:text="@string/debt_kamu"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_0"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/dialog_main_expenses"
            android:gravity="end"
            android:layout_toEndOf="@+id/dialog_main_saldo_tv"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:id="@+id/dialog_main_saldo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_main_debt_tv"
            android:text="@string/saldo_kamu"
            android:textSize="16sp"
            android:textColor="@color/defaultText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_0"
            android:textSize="16sp"
            android:textColor="@color/defaultText"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/dialog_main_debt"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:layout_toEndOf="@+id/dialog_main_debt_tv"
            android:layout_alignParentEnd="true"/>
    
</RelativeLayout>