<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:background="@color/headerBg"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    android:layout_marginBottom="58dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_expenses_kamu"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="16dp"
                        android:gravity="center_horizontal"
                        android:layout_marginEnd="16dp" />

                <TextView
                        android:id="@+id/main_total_expenses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_0"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_horizontal"
                        android:layout_marginStart="16dp" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_income_kamu"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />

                <TextView
                        android:id="@+id/main_total_income"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_0"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_horizontal"
                        android:layout_marginStart="16dp" />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/main_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/headerBg"
                    android:layout_gravity="bottom"
                    app:tabSelectedTextColor="@android:color/white"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:tabTextColor="@android:color/darker_gray"
                    app:tabIndicatorColor="@android:color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/history_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_white_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:layout_anchor="@+id/main_view_pager"
            app:layout_anchorGravity="bottom|end"
            app:tint="@android:color/white"
            app:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/add_image"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/debt_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:layout_anchor="@+id/main_view_pager"
            app:layout_anchorGravity="bottom|end"
            app:icon="@drawable/ic_add_white_24dp"
            app:iconTint="@android:color/white"
            app:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/add_image"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
